@@ -1,7 +1,7 @@
 /* tex-make.c: run external programs to make TeX-related files.
 
    Copyright 1993, 1994, 1995, 1996, 1997, 2008, 2009, 2010, 2011,
-             2012 Karl Berry.
+             2012, 2013 Karl Berry.
    Copyright 1997, 1998, 2001-05 Olaf Weber.
 
    This library is free software; you can redistribute it and/or
@@ -404,6 +404,7 @@ maketex (kpathsea kpse, kpse_file_format_type format, string* args)
 }
 
 
+
 /* Create BASE in FORMAT and return the generated filename, or
    return NULL.  */
 
@@ -437,7 +438,7 @@ kpathsea_make_tex (kpathsea kpse, kpse_file_format_type format,
      * No doubt some possibilities were overlooked.
      */
     if (base[0] == '-' /* || IS_DIR_SEP(base[0])  */) {
-      fprintf(stderr, "kpathsea: Invalid fontname `%s', starts with '%c'\n",
+      fprintf(stderr, "kpathsea:make_tex: Invalid fontname `%s', starts with '%c'\n",
               base, base[0]);
       return NULL;
     }
@@ -449,7 +450,7 @@ kpathsea_make_tex (kpathsea kpse, kpse_file_format_type format,
           && base[i] != '.'
           && !IS_DIR_SEP(base[i]))
       {
-        fprintf(stderr, "kpathsea: Invalid fontname `%s', contains '%c'\n",
+        fprintf(stderr, "kpathsea:make_tex: Invalid fontname `%s', contains '%c'\n",
                 base, base[i]);
         return NULL;
       }
